fix: Buttons overlapping on recordings modal

--- a/frontend/src/scenes/session-recordings/player/PlayerMeta.scss
+++ b/frontend/src/scenes/session-recordings/player/PlayerMeta.scss
@@ -36,6 +36,12 @@
                 height: 0px;
             }
         }
+
+        .LemonModal & {
+            .PlayerMeta__top {
+                padding-right: 3.5rem;
+            }
+        }
     }
 
     &--fullscreen {
@@ -71,12 +77,6 @@
             &--exit-active {
                 transform: translateX(-100%);
             }
-        }
-    }
-
-    .LemonModal & {
-        .PlayerMeta__expander {
-            margin-right: 3rem;
         }
     }
 
